# amdis_workshop_16

./: CMakeLists.txt  README.md  _config.yml  about.md  anmeldung.md  index.md
.sass-cache/0e03f5859724e57d7ebd872cffcd5d78146aaf65/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
_includes/: footer.html  head.html  main.md
_sass/: _layout.scss
_site/: feed.xml  index.html
_site/about/: index.html
_site/anmeldung/: index.html
_site/css/: main.css
exercises/: CMakeLists.txt
exercises/init/: exercise2b.dat.2d  exercise3.dat.2d  exercise4.dat.2d  exercise4b.dat.2d
exercises/macro/: kanal.2d  kanal.geo  kanal.msh  kanal.vtu  kanal2.geo  kanal2.msh  kanal2.vtu  mesh.1d
exercises/src/: exercise1.cc  exercise2.cc  exercise3.cc  exercise4.cc
init/: biharmonic1.dat.2d  heat1.dat.2d  heat4.dat.2d  navier_stokes.dat.2d  navier_stokes2.dat.2d  nonlin1.dat.2d  nonlin2.dat.2d  nonlin3.dat.2d  poisson1.dat.2d  poisson2.dat.2d  poisson3.dat.2d  poisson4.dat.2d
macro/: kanal.2d
solution/: CMakeLists.txt
solution/init/: exercise1.dat.2d  exercise2.dat.2d  exercise2b.dat.2d  exercise3.dat.2d  exercise3b.dat.2d  exercise4.dat.2d  exercise4b.dat.2d
solution/macro/: kanal2.2d  mesh.2d
solution/src/: exercise1.cc  exercise2.cc  exercise2b.cc  exercise3.cc  exercise4.cc  exercise4b.cc
src/: biharmonic1.cc  heat1.cc  heat2.cc  heat3.cc  heat4.cc  navier_stokes.cc  navier_stokes2.cc  nonlin1.cc  nonlin2.cc  nonlin3.cc  poisson1.cc  poisson2.cc  poisson3.cc  poisson4.cc
